--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>nix_11</artifactId>
     <version>1.0-SNAPSHOT</version>
     <modules>
-
+        <module>hw_2_base_types</module>
     </modules>
     <packaging>pom</packaging>
 
