--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,11 @@
     <groupId>ua.com.alevel</groupId>
     <artifactId>nix_11</artifactId>
     <version>1.0-SNAPSHOT</version>
+
     <modules>
         <module>hw_2_base_types</module>
+        <module>hw_3_strings</module>
+        <module>reverse_string_util</module>
     </modules>
     <packaging>pom</packaging>
 
