--- a/hw_2_base_types/pom.xml
+++ b/hw_2_base_types/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>app</artifactId>
+    <artifactId>hw_2_base_types</artifactId>
     <packaging>jar</packaging>
     <name>hw_2_base_types</name>
 
